@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure — Receive and validate a package

class CurriculumWorkflow {
  +ReceiveAsync(actor, fileName, contentType, bytes, correlationId): Task<ImportReceipt>
  +GetStatusAsync(actor, id): Task<ImportStatus>
  +ValidateNextAsync(): Task
  +AcknowledgeWarningsAsync(actor, id, request): Task<ImportStatus>
  +ReviewAsync(actor, id, request): Task<ImportStatus>
}

class PackageIntakeScanner {
  {static} +ReadJson(bytes: byte[]): string
}

class PackageValidator {
  {static} +Validate(rawPackage: string): (Package, Issues)
}

class CurriculumRecord {
  +Guid Id
  +string TenantId
  +string AuthorId
  +string RawPackage
  +string Checksum
  +string CorrelationId
  +CurriculumStatus Status
  +IReadOnlyList<ValidationIssue> Issues
}

class ValidationReport {
  +string ValidatorVersion
  +string ContractVersion
  +string PackageChecksum
  +string IssueChecksum
  +IReadOnlyList<string> CheckCategories
  +int ErrorCount
  +int WarningCount
  +DateTimeOffset CompletedAt
}

class WarningAcknowledgement {
  +string ActorId
  +DateTimeOffset AcknowledgedAt
  +string PackageChecksum
  +string IssueChecksum
  +string? Rationale
}

class WarningAcknowledgementRequest {
  +string PackageChecksum
  +string IssueChecksum
  +string? Rationale
}

class ImportReceipt {
  +Guid Id
  +string Checksum
  +CurriculumStatus Status
  +string CorrelationId
  +string StatusUrl
}

interface ICurriculumStore {
  +AddImportAsync(record): Task
  +ClaimReceivedAsync(): Task<CurriculumRecord?>
  +SaveImportAsync(record, eventType, actorId): Task
  +RecordAuditAsync(tenantId, actorId, eventType, entityId, correlationId): Task
}

class CurriculumStore
class CurriculumValidationWorker

CurriculumValidationWorker --> CurriculumWorkflow : invokes validation
CurriculumWorkflow ..> PackageIntakeScanner : screens through
CurriculumWorkflow ..> PackageValidator : validates through
CurriculumWorkflow --> ICurriculumStore : persists through
ICurriculumStore <|.. CurriculumStore
CurriculumWorkflow ..> ImportReceipt : creates
CurriculumWorkflow ..> WarningAcknowledgementRequest : accepts
CurriculumRecord *-- "0..1" ValidationReport
CurriculumRecord *-- "0..1" WarningAcknowledgement
@enduml
